--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name='viewport' content="width=device-width,initial-scale=1.0">
         <link rel='icon' href='tomato.png' type='image/png' sizes = "16x16">
+        <link rel='stylesheet' href='pomodoro.css'>
     </head>
     <body class='body'>
         <header class='header'>
@@ -23,10 +24,13 @@
         </main>
         <script src='https://gotcha.imfast.io/library.js' type='text/javascript'></script>
         <script type='text/javascript'>
-            myLoader.push('js', 'pomodoro', {src: 'pomodoro.js'});
-            myLoader.push('css', 'pomodoro', {href: 'pomodoro.css'});
+            /*
+            myLoader.push('js', 'pomodoro', {src: ''});
+            myLoader.push('css', 'pomodoro', {href: });
             myLoader.load(['fn', 'pomodoro']);
+            */
         </script>
+        <script src='pomodoro.js></script>
         
     </body>
 </html>
