--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href='#' id='add' class='todo__add'>&#10010</a>
             </section>
         </main>
-        <script src='https://gotcha.imfast.io/library.js' type='text/javascript'></script>
+        <script x-src='https://gotcha.imfast.io/library.js' type='text/javascript'></script>
         <script type='text/javascript'>
             /*
             myLoader.push('js', 'pomodoro', {src: ''});
