--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             myLoader.load(['fn', 'pomodoro']);
             */
         </script>
+        <script src='fn.js></script>
         <script src='pomodoro.js></script>
         
     </body>
