--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             myLoader.load(['fn', 'pomodoro']);
             */
         </script>
-        <script src=fn.js></script>
-        <script src='pomodoro.js></script>
+        <script src='fn.js'></script>
+        <script src='pomodoro.js'></script>
         
     </body>
 </html>
